Update project - Fixing Client and property endpoints
